diwi: various improvs for web cleint

--- a/app/diwi/trunk/client/web/index.html
+++ b/app/diwi/trunk/client/web/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bluecurve/bluecurve.css">
 	<link rel="stylesheet" type="text/css" href="css/winclassic.css">
 
+	<script type="text/javascript" src="lib/gt/Date.js"></script>
 	<script type="text/javascript" src="lib/gt/DHTML.js"></script>
 	<script type="text/javascript" src="lib/gt/KWClient.js"></script>
 	<script type="text/javascript" src="lib/gt/KWClientExt.js"></script>
