--- a/app/diwi/trunk/client/web/pages/faq.html
+++ b/app/diwi/trunk/client/web/pages/faq.html
@@ -6,14 +6,14 @@
 	<p>
 		Bij de recreant van nu bestaat de wens het landschap, cultuur en geschiedenis te willen "beleven", het liefst op
 		een zo persoonlijke manier. Daarnaast zal onder meer door de vergrijzing de komende jaren de vrije tijd alleen
-		maar toenemen. Tijd voor het ontwikkeling van nieuwe manieren van actief educatief recreëren. Struinen door het
-		landschap bijvoorbeeld, met een persoonlijke ‘Wichelroede’ die informatie geeft op het moment dat jij als
-		gebruiker persoonlijk geprikkeld wil worden, of die je kan ‘laden’ met eigen persoonlijke verhalen. Want de
+		maar toenemen. Tijd voor het ontwikkeling van nieuwe manieren van actief educatief recre&euml;ren. Struinen door het
+		landschap bijvoorbeeld, met een persoonlijke "Wichelroede" die informatie geeft op het moment dat jij als
+		gebruiker persoonlijk geprikkeld wil worden, of die je kan "laden" met eigen persoonlijke verhalen. Want de
 		moderne "Wichelroede" is geen eenvoudige wilge- of hazelaartak, maar een kien product uit de mobiele en locatie
-		bepalingstechnologie, waarmee de gebruiker al lopend of fietsend zijn omgeving fysiek én virtueel kan beleven.
+		bepalingstechnologie, waarmee de gebruiker al lopend of fietsend zijn omgeving fysiek &eacute;n virtueel kan beleven.
 		<br><br>
 		Deze kennis wordt digitaal gemaakt en gekoppeld aan GEO-Informatie (informatie over geografische objecten,
-		bijvoorbeeld land kaarten of luchtfoto’s). Kennis en mogelijke routes worden in een mobiel apparaat geladen en
+		bijvoorbeeld land kaarten of luchtfoto's). Kennis en mogelijke routes worden in een mobiel apparaat geladen en
 		met behulp van GPS als navigator vindt vervolgens een interactieve overdracht plaats van informatie tussen
 		consument of producent en landschap. Project de Digitale Wichelroede is een onderzoeksproject, hetgeen inhoudt
 		dat we onderzoeken wat mogelijkheden en de onmogelijkheden van een Digitale Wichelroede zijn. Er wordt daarom
@@ -28,7 +28,7 @@
 		zomer van 2007 wordt getest. Uiteindelijk moeten de resultaten leiden tot het opstellen van een rapport waarin
 		onder meer de bruikbaarheid van een systeem om kennis digitaal op te slaan en van de interface, de ordening van
 		informatie, het onderscheid tussen passief en actief gebruik met het oog op gebruiksgemak, -plezier en
-		intensiteit geëvalueerd wordt. Met de resultaten van ons onderzoek kan in een vervolgtraject een product voor de
+		intensiteit ge&euml;valueerd wordt. Met de resultaten van ons onderzoek kan in een vervolgtraject een product voor de
 		markt worden gemaakt.
 	</p>
 
