--- a/app/diwi/trunk/client/web/pages/welkom.html
+++ b/app/diwi/trunk/client/web/pages/welkom.html
@@ -7,18 +7,18 @@
 			href="http://webgrs.wur.nl/cgi/projects/diwi/"><strong>Ga naar het aanmeldformulier</strong></a></p>
 
 	<p>
-		Struinen door het landschap, met een persoonlijke ÔDigitale WichelroedeÕ die interessante wetenswaardigheden
+		Struinen door het landschap, met een persoonlijke &#180;Digitale Wichelroede&#96; die interessante wetenswaardigheden
 		toont op het moment dat jij als gebruiker persoonlijk geprikkeld wilt worden? Of wil je zelf je persoonlijke
 		verhaal over de omgeving delen met andere Digitale Wichelaars? Het is allemaal mogelijk. Project de Digitale
 		Wichelroede onderzoekt hoe op innovatieve wijze cultuurhistorische kennis beschikbaar gemaakt kan worden voor de
-		recreant van nu, die wandelend of fietsend zijn omgeving fysiek én virtueel wil beleven. De moderne
-		‘wichelroede’ is geen eenvoudige wilge- of hazelaartak, maar een kien product uit de mobiele en locatie
+		recreant van nu, die wandelend of fietsend zijn omgeving fysiek &eacute;n virtueel wil beleven. De moderne
+		"wichelroede" is geen eenvoudige wilge- of hazelaartak, maar een kien product uit de mobiele en locatie
 		bepalingstechnologie.
 	</p>
 
 	<p>
 		Met een consortium waarin partners van uiteenlopende achtergrond zitting hebben wordt met project de Digitale
-		Wichelroede onderzoek gedaan naar de kansen van zo’n moderne ‘wichelroede’. Immers, alvorens een product te
+		Wichelroede onderzoek gedaan naar de kansen van zo’n moderne "wichelroede". Immers, alvorens een product te
 		ontwikkelen moet onderzocht worden hoe zo’n Digitale Wichelroede er het best uit kan zien en wat zijn technische
 		en inhoudelijke mogelijkheden zijn. Er wordt dan ook hard gewerkt aan een pilotversie en deze wordt in de zomer
 		van 2007 getest. Hoe en waarom we dat doen lees je hieronder.
@@ -27,7 +27,7 @@
 	<strong>Een slim apparaat</strong><br>
 
 	<p>
-		De Digitale Wichelroede is een slim apparaat dat een heleboel weet, zodat jij als gebruiker díe
+		De Digitale Wichelroede is een slim apparaat dat een heleboel weet, zodat jij als gebruiker d&iacute;e
 		cultuurhistorische kennis eruit kan halen waarover je graag wat meer te weten wilt komen. Bij het ontwikkelen
 		van het apparaat moet daarom eerst een heleboel kennis verzameld en gedigitaliseerd worden. Deze informatie
 		halen we overal vandaan. Uit boeken, databases, maar ook van historische verenigingen en van mensen die in een
@@ -47,7 +47,7 @@
 	<p>
 		De resultaten van het onderzoek worden uiteindelijk opgetekend in een rapport waarin onder meer de bruikbaarheid
 		van een systeem om kennis digitaal op te slaan, de interface, de ordening van informatie, het onderscheid tussen
-		passief en actief gebruik met het oog op gebruiksgemak, -plezier en –intensiteit worden geëvalueerd.
+		passief en actief gebruik met het oog op gebruiksgemak, -plezier en -intensiteit worden ge&euml;valueerd.
 	</p>
 
 	<p>
@@ -60,17 +60,17 @@
 	<p>
 		Het initiatief voor onderzoeksproject de Digitale Wichelroede sluit aan bij actuele ontwikkelingen op het gebied
 		van recreatie, technologie, en onderzoek. Zo bestaat bij de recreant van nu de wens het landschap, cultuur en
-		geschiedenis te willen ‘beleven’, het liefst op een zo persoonlijke manier. Daarnaast zal onder meer door de
+		geschiedenis te willen "beleven", het liefst op een zo persoonlijke manier. Daarnaast zal onder meer door de
 		vergrijzing de komende jaren de vrije tijd toenemen. De verwachting is bovendien dat locatie gebaseerde
 		technologie innoveert omdat het zich richt op de individuele, plaatsafhankelijke informatievraag, inspeelt op
-		een veranderend gebruik van het landschap – denk bijvoorbeeld aan de economische vernieuwing van landelijke
+		een veranderend gebruik van het landschap - denk bijvoorbeeld aan de economische vernieuwing van landelijke
 		gebieden - en bijdraagt aan een toeristisch-recreatief product geschrankt op GEO-Informatie.
 	</p>
 
 	<p>
 		Ook is veel cultuurhistorische informatie, bijvoorbeeld de kennis van historische verenigingen of verhalen van
 		mensen die al heel lang in een bepaald gebied wonen nog niet ontsloten voor digitaal gebruik. Deze informatie is
-		erg waardevol en gaat verloren als hij niet wordt gedocumenteerd. Naast deze noodzaak te ‘bewaren’ is onderzoek
+		erg waardevol en gaat verloren als hij niet wordt gedocumenteerd. Naast deze noodzaak te "bewaren" is onderzoek
 		van belang omdat al doende bruggen gebouwd en geslagen worden tussen geo-informatie deskundigen,
 		cultuurhistorische bronhouders (zoals gemeenten, provincies, stichtingen en bewoners van een bepaald gebied) en
 		cultuur-toeristische informatie deskundigen. Tegelijkertijd dient het project tot projectontwikkeling. Het is
