--- a/app/diwi/trunk/client/web/pages/maakroute.html
+++ b/app/diwi/trunk/client/web/pages/maakroute.html
@@ -19,12 +19,10 @@
 - besloten (integer, >= 0)
 - halfopen (integer, >= 0)
 - open (integer, >= 0)
-- industrie (integer, >= 0)
 - bebouwd (integer, >= 0)
 - bos (integer, >= 0)
 - heizand (integer, >= 0)
 - natuurgras (integer, >= 0)
-- grootwater (integer, >= 0)
 - kleinwater  (integer, >= 0) -->
 <div class="slidercaption" id="caption1">
 	Besloten agrarisch gebied
@@ -63,67 +61,67 @@
 </div>
 
 <div class="slidercaption" id="caption4">
-	Bedrijven en industrie
+	Bewoningskernen
 </div>
 
 <div class="slider" id="s4">
 	<input class="slider-input" id="s4input"/>
 </div>
 
-<div class="slidertext" id="industrie">
+<div class="slidertext" id="bebouwd">
 	<input id="s4value" size="3" value="0" />%
 </div>
 
 <div class="slidercaption" id="caption5">
-	Bewoningskernen
+	Bos
 </div>
 
 <div class="slider" id="s5">
 	<input class="slider-input" id="s5input"/>
 </div>
 
-<div class="slidertext" id="bebouwd">
+<div class="slidertext" id="bos">
 	<input id="s5value" size="3" value="0" />%
 </div>
 
 <div class="slidercaption" id="caption6">
-	Bos
+	Heide zand en duingebied
 </div>
 
 <div class="slider" id="s6">
 	<input class="slider-input" id="s6input"/>
 </div>
 
-<div class="slidertext" id="bos">
+<div class="slidertext" id="heizand">
 	<input id="s6value" size="3" value="0" />%
 </div>
 
 <div class="slidercaption" id="caption7">
-	Heide zand en duingebied
+	Natuurlijk grasland, moeras <br>en riet
 </div>
 
 <div class="slider" id="s7">
 	<input class="slider-input" id="s7input"/>
 </div>
 
-<div class="slidertext" id="heizand">
+<div class="slidertext" id="natuurgras">
 	<input id="s7value" size="3" value="0" />%
 </div>
 
 <div class="slidercaption" id="caption8">
-	Natuurlijk grasland, moeras <br>en riet
+	Sloten, beken, rivieren en <br>plassen
 </div>
 
 <div class="slider" id="s8">
 	<input class="slider-input" id="s8input"/>
 </div>
 
-<div class="slidertext" id="natuurgras">
+<div class="slidertext" id="kleinwater">
 	<input id="s8value" size="3" value="0" />%
 </div>
 
-<div class="slidercaption" id="caption9">
-	Zee en grote meren
+<!-- <div class="slidercaption" id="caption9">
+	Sloten, beken, rivieren en <br>plassen
 </div>
 
 <div class="slider" id="s9">
@@ -135,7 +133,6 @@
 </div>
 
 <div class="slidercaption" id="caption10">
-	Sloten, beken, rivieren en <br>plassen
 </div>
 
 <div class="slider" id="s10">
@@ -144,10 +141,10 @@
 
 <div class="slidertext" id="kleinwater">
 	<input id="s10value" size="3" value="0" />%
-</div>
+</div>  -->
 
 <div id="butmaakeigenroute">
-	<img class="button" src="media/buttons/maakroute-submit.gif" onClick="javascript:ROUTE.generateRoute();" />
+	<img class="button" src="media/buttons/maakroute-submit.gif" onClick="javascript:ROUTE.generateRoute();" alt="maakroute"/>
 </div>
 
 
