--- a/app/diwi/trunk/client/web/pages/mijnpagina.html
+++ b/app/diwi/trunk/client/web/pages/mijnpagina.html
@@ -1,4 +1,5 @@
 <h2>Mijn Tochten</h2>
+<div id="remarks"><p>Hieronder een overzicht van uw gemaakte tochten gerangschikt op datum. Opmerkingen over Digitale Wichelroede kunt u zenden aan <a href="mailto:info@digitalewichelroede.nl">info@digitalewichelroede.nl</a></p></div>
 <div id="triplist">
 
 </div>
