various small updates....

--- a/app/geoskating/trunk/server/webapp/gs/content/appabout.html
+++ b/app/geoskating/trunk/server/webapp/gs/content/appabout.html
@@ -11,7 +11,7 @@ a mobile phone.
 At the same time the skater can enrich GPS data
 with road surface ratings and by sending pictures and videos from the phone.
 The server will draw geographic maps
-showing road quality through colouring (red=bad, orange=soso, green=good, yellow=unknown). Pictures and videos
+showing road quality through colouring (red=bad, orange=soso, yellow=good, green=excellent, gray=unknown). Pictures and videos
 are presented on the GPS locations where they were captured (geotagged).
 Even more, skaters can also be followed
 <b><i>in real-time over the map</i></b> while skating!
