--- a/app/geoskating/trunk/server/webapp/gs/mainmenu.html
+++ b/app/geoskating/trunk/server/webapp/gs/mainmenu.html
@@ -28,6 +28,7 @@
 			<ul>
 				<li><a href="#" fn="GTAPP.mSetMap" arg="maproutes">Skate Map (Streets)</a></li>
 				<li><a href="#" fn="GTAPP.mSetMap" arg="satroutes">Skate Map (Satellite)</a></li>
+				<li><a href="#" fn="GTAPP.mSetMap" arg="osmroutes">Skate Map (OSM)</a></li>
 				<li><a href="#" fn="GTAPP.mSetMap" arg="blancroutes">Skate Map (Blanc)</a></li>
 				<li><a href="#" fn="GTAPP.mSetMap" arg="map">Streets</a></li>
 				<li><a href="#" fn="GTAPP.mSetMap" arg="satellite">Satellite</a></li>
