--- a/app/diwi/trunk/client/cms/cms.html
+++ b/app/diwi/trunk/client/cms/cms.html
@@ -674,13 +674,7 @@ MM_reloadPage(true);
 
 
  <div id="result" style="position:absolute; width:494px; height:115px; z-index:51; left: 15px; top: 696px; overflow: auto;" class="poidata"></div>
- <div id="top"><img src="images/top2.jpg" width="597" height="246" border="0" usemap="#Mapie">
-  <map name="Mapie">
-    <area shape="rect" coords="429,202,513,227" href="cms.html" target="_self">
-    <area shape="rect" coords="229,205,311,225" href="index.html">
-    <area shape="rect" coords="332,204,397,228" href="login.html">
-  </map>
-</div>
+ <div id="top"></div>
   
   <div id="Layer1" style="position:absolute; width:201px; height:24px; z-index:6; left: 14px; top: 644px;" class="poidata"> gevoeligheid:
     <input name="clicksens" type="text" id="clicksens" value="500" size="6" maxlength="10">
