--- a/app/diwi/trunk/client/cms/index.html
+++ b/app/diwi/trunk/client/cms/index.html
@@ -18,20 +18,13 @@ MM_reloadPage(true);
 </head>
 
 <body>
-<div id="top"><img src="images/top2.jpg" width="597" height="246" border="0" usemap="#Map">
-  <map name="Map">
-    <area shape="rect" coords="326,204,390,228" href="login.html">
-    <area shape="rect" coords="224,205,304,225" href="index.html">
-    <area shape="rect" coords="420,202,502,227" href="cms.html">
-  </map>
-</div>
 <div class="pagina id="Welkom">
   <h1>WELKOM</h1>
   <p>Welkom bij het beheersysteem voor de &quot;points of interest&quot; van DIWI. Hier kunt u eenvoudig nieuw punten toevoegen, punten aanpassen en nieuwe verhalen, foto's en filmpjes aan de pois toevoegen.</p>
 
-  <p>Voor toegang tot het systeem click op login. Een toegangscode kunt u aanvragen via ... </p>
+  <p>Voor toegang tot het systeem click op <a href="login.html">login</a>. Een toegangscode kunt u aanvragen via ... </p>
   <p></p>
 </div>
-  <p>bla</p>
+  <div id="Layer1" style="position:absolute; width:767px; height:115px; z-index:504; left: 5px; top: 5px;"><img src="images/browse_a.gif" width="530" height="135"></div>
 </body>
 </html>
