--- a/app/diwi/trunk/client/cms/login.html
+++ b/app/diwi/trunk/client/cms/login.html
@@ -108,13 +108,6 @@ Einde KW functies
 </head>
 
 <body>
-<div id="top"><img src="images/top2.jpg" width="597" height="246" border="0" usemap="#Map">
-  <map name="Map">
-    <area shape="rect" coords="326,204,390,228" href="login.html">
-    <area shape="rect" coords="224,205,304,225" href="index.html">
-    <area shape="rect" coords="421,202,503,227" href="cms.html" target="_self">
-  </map>
-</div>
 <div class="pagina id="Welkom">
   <h1>Login</h1>
   <p>Voer uw login naam en wachtwoord in om toegang te krijgen tot het POI management systeem </p>
@@ -132,17 +125,18 @@ Einde KW functies
       <tr>
         <td>&nbsp;</td>
         <td colspan="2"><div align="center">
-          <input name="Login" type="button" class="content" id="Login" onClick="TST.login(this.form)" value="Login">
+            <input name="Login" type="button" class="content" id="Login" onClick="TST.login(this.form)" value="Login">
         </div></td>
-          </table>
-    <p>&nbsp;    </p>
+    </table>
+    <p>&nbsp; </p>
   </form>
   <p>&nbsp;</p>
-  <div id="result" style="position:absolute; width:95%; height:100px; z-index:51; left: 4px; top: 260px; overflow: scroll;" class="poidata">
+  <div id="result" style="position:absolute; width:687px; height:100px; z-index:51; left: -3px; top: 235px; overflow: auto;" class="poidata">
     <p>&nbsp;</p>
   </div>
   <p>&nbsp;</p>
 </div>
-  <p>bla</p>
+<div id="Layer1" style="position:absolute; width:767px; height:115px; z-index:504; left: 5px; top: 5px;"><img src="images/browse_a.gif" width="530" height="135"></div>
+<p>&nbsp;</p>
 </body>
 </html>
