--- a/app/diwi/trunk/client/web/pages/routes.html
+++ b/app/diwi/trunk/client/web/pages/routes.html
@@ -1,6 +1,7 @@
 <div id="vasteroutes">
+	<div id="legenda"></div>	
+	<div id="route_info_container">
+		<div id="route_info"></div>
+	</div>
 </div>
-<div id="mapanchor">&nbsp;</div>
-		<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+
