--- a/app/diwi/trunk/client/web/pages/welkom.html
+++ b/app/diwi/trunk/client/web/pages/welkom.html
@@ -1,89 +1,32 @@
-	<H1><strong>Welkom bij de Digitale Wichelroede</strong><br></H1>
+<div id="home_main">
 
-	<p><strong>Meld je nu aan!!!!</strong></p>
+<p>
+<strong>Welkom bij de Digitale Wichelroede (DiWi)</strong><br>
+Struinen door het landschap, met een persoonlijke "Digitale Wichelroede" die interessante wetenswaardigheden toont op het moment dat jij als gebruiker persoonlijk geprikkeld wilt worden? Of wil je zelf je persoonlijke verhaal over de omgeving delen met andere Digitale Wichelaars? En wil je thuis op jouw computer zien of de foto's die je tijdens de tocht hebt gemaakt zijn gelukt? Het is allemaal mogelijk met de Digitale Wichelroede. Tijd voor het ontwikkelen van nieuwe manieren van recre&euml;ren. 
+</p>
 
-	<p><i>Doe mee aan het onderzoek naar innovatieve wijzen waarop cultuurhistorische kennis beschikbaar gemaakt kan
-		worden voor de recreant van nu, die wandelend of fietsend zijn omgeving wil beleven.</i><br/><br/><a
-			href="http://webgrs.wur.nl/cgi/projects/diwi/"><strong>Ga naar het aanmeldformulier</strong></a></p>
+<p>
+<strong>Wat is een Digitale Wichelroede?</strong><br>
+De moderne "wichelroede" is geen wilge- of hazelaartak, maar een slim navigatie-apparaat waarmee veel te beleven valt. De recreant van nu wil namelijk steeds vaker het verhaal achter het landschap weten. Het liefst op een persoonlijke manier. De digitale wichelroede is een onderzoeksproject. Er is een eerste versie gebouwd met wetenswaardigheden rond de Grebbelinie in de provincies Utrecht en Gelderland. Er wordt getest op de Grebbeberg en in de gemeenten Renswoude en Scherpenzeel. Uiteindelijk moeten de resultaten leiden tot aanbevelingen hoe de nulversie tot een product kan worden uitgebouwd.
+</p>
 
-	<p>
-		Struinen door het landschap, met een persoonlijke &#180;Digitale Wichelroede&#96; die interessante wetenswaardigheden
-		toont op het moment dat jij als gebruiker persoonlijk geprikkeld wilt worden? Of wil je zelf je persoonlijke
-		verhaal over de omgeving delen met andere Digitale Wichelaars? Het is allemaal mogelijk. Project de Digitale
-		Wichelroede onderzoekt hoe op innovatieve wijze cultuurhistorische kennis beschikbaar gemaakt kan worden voor de
-		recreant van nu, die wandelend of fietsend zijn omgeving fysiek &eacute;n virtueel wil beleven. De moderne
-		"wichelroede" is geen eenvoudige wilge- of hazelaartak, maar een kien product uit de mobiele en locatie
-		bepalingstechnologie.
-	</p>
+<br>
 
-	<p>
-		Met een consortium waarin partners van uiteenlopende achtergrond zitting hebben wordt met project de Digitale
-		Wichelroede onderzoek gedaan naar de kansen van zo’n moderne "wichelroede". Immers, alvorens een product te
-		ontwikkelen moet onderzocht worden hoe zo’n Digitale Wichelroede er het best uit kan zien en wat zijn technische
-		en inhoudelijke mogelijkheden zijn. Er wordt dan ook hard gewerkt aan een pilotversie en deze wordt in de zomer
-		van 2007 getest. Hoe en waarom we dat doen lees je hieronder.
-	</p>
-	<img src="media/images/pda.gif" border="0" align="left">
-	<strong>Een slim apparaat</strong><br>
+<p>
+<strong>MEEDOEN</strong>
+</p>
 
-	<p>
-		De Digitale Wichelroede is een slim apparaat dat een heleboel weet, zodat jij als gebruiker d&iacute;e
-		cultuurhistorische kennis eruit kan halen waarover je graag wat meer te weten wilt komen. Bij het ontwikkelen
-		van het apparaat moet daarom eerst een heleboel kennis verzameld en gedigitaliseerd worden. Deze informatie
-		halen we overal vandaan. Uit boeken, databases, maar ook van historische verenigingen en van mensen die in een
-		bepaald gebied wonen. Al deze verhalen worden gekoppeld aan specifieke plekken in een bepaald gebied en
-		vastgepind op een digitale geografische kaart. Nadat wetenswaardigheden en mogelijke routes en locaties zijn
-		samengebracht worden ze in een speciaal voor het project ontworpen en gebouwd mobiel systeem geladen. Dit
-		systeem beschikt ook over een GPS waardoor de struiner niet kan verdwalen.
-	</p>
+<p>
+<strong>Opnieuw aanmelding voor reeds aangemelde bezoekers </strong><br>
+U heeft zich al eens aangemeld als deelnemer aan de digitale wichelroede. <br>
+<a href="http://webgrs.wur.nl/cgi/projects/diwi/" > Klik hier om aan te geven wanneer u wilt gaan wandelen of fietsen. </a>
+</p>
 
-	<p>
-		Jij als deelnemer kunt nu op pad. Je zult navigeren door het landschap, op zoek naar bijzondere plekken. Zo
-		ontstaat een interactieve overdracht van informatie tussen mens en landschap. Maar hoe de recreant zijn tocht
-		met de Digitale Wichelroede precies zal ervaren weten we natuurlijk nog niet. Daar komen we pas achter na de
-		zomer van 2007 als de tests zijn afgerond.
-	</p>
+<p>
+<strong>Inloggen voor nieuwe bezoekers </strong><br>
+Gaat u voor het eerst inloggen? <a href="http://webgrs.wur.nl/cgi/projects/diwi/" ><br>
+Klik dan hier om u voor het eerst aan te melden. </a>
+</p>
 
-	<p>
-		De resultaten van het onderzoek worden uiteindelijk opgetekend in een rapport waarin onder meer de bruikbaarheid
-		van een systeem om kennis digitaal op te slaan, de interface, de ordening van informatie, het onderscheid tussen
-		passief en actief gebruik met het oog op gebruiksgemak, -plezier en -intensiteit worden ge&euml;valueerd.
-	</p>
 
-	<p>
-		De (tussen)uitkomsten van het onderzoek zullen via verschillende kanalen kenbaar gemaakt worden. Via onze
-		website www.digitalewichelroede.nl kun je ons volgen en kun je lezen over actuele ontwikkelingen.
-	</p>
-
-	<H3>Motivatie</H3>
-
-	<p>
-		Het initiatief voor onderzoeksproject de Digitale Wichelroede sluit aan bij actuele ontwikkelingen op het gebied
-		van recreatie, technologie, en onderzoek. Zo bestaat bij de recreant van nu de wens het landschap, cultuur en
-		geschiedenis te willen "beleven", het liefst op een zo persoonlijke manier. Daarnaast zal onder meer door de
-		vergrijzing de komende jaren de vrije tijd toenemen. De verwachting is bovendien dat locatie gebaseerde
-		technologie innoveert omdat het zich richt op de individuele, plaatsafhankelijke informatievraag, inspeelt op
-		een veranderend gebruik van het landschap - denk bijvoorbeeld aan de economische vernieuwing van landelijke
-		gebieden - en bijdraagt aan een toeristisch-recreatief product geschrankt op GEO-Informatie.
-	</p>
-
-	<p>
-		Ook is veel cultuurhistorische informatie, bijvoorbeeld de kennis van historische verenigingen of verhalen van
-		mensen die al heel lang in een bepaald gebied wonen nog niet ontsloten voor digitaal gebruik. Deze informatie is
-		erg waardevol en gaat verloren als hij niet wordt gedocumenteerd. Naast deze noodzaak te "bewaren" is onderzoek
-		van belang omdat al doende bruggen gebouwd en geslagen worden tussen geo-informatie deskundigen,
-		cultuurhistorische bronhouders (zoals gemeenten, provincies, stichtingen en bewoners van een bepaald gebied) en
-		cultuur-toeristische informatie deskundigen. Tegelijkertijd dient het project tot projectontwikkeling. Het is
-		immers een proeftuin voor geo-informatica en mobiele technologie. Kortom, redenen te over voor het doen van
-		onderzoek naar nieuwe manieren van cultuur-toerisme.
-	</p>
-
-	<H3>Grebbelinie</H3>
-
-	<p>
-		Het project wordt getest in een deel van de Grebbelinie. Dit gebied vol achttiende-eeuwse fortificaties geldt
-		als een belangrijk toeristisch gebied in de Gelderse Vallei. Hier bevind je je in een lagenlandschap van natuur,
-		cultuur en historie. Met behulp van de Digitale Wichelroede kun je een persoonlijk toegesneden verkenningstocht
-		organiseren door verschillende tijd- en cultuurlagen, op zoek naar kazematten, forten of bijvoorbeeld de
-		mysterieuze drakentandenversperring.
-	</p>
+</div>
