--- a/app/diwi/trunk/client/cms/vm.html
+++ b/app/diwi/trunk/client/cms/vm.html
@@ -72,15 +72,16 @@ function init(){
   function makeOverview()
   {
   
-  	DH.addHTML('vms', '<table width="329" border="0" cellpadding="0" cellspacing="0">')
+  	DH.addHTML('vms', '<table border="1" cellpadding="0" cellspacing="0">')
   	for (i=0;i<poiArray.length;i++)	
 	{
 		id = poiArray[i].id;
 		name = poiArray[i].Name;
 		kind = poiArray[i].Kind;
 
-		DH.addHTML('vms', '<tr><td>'+name+' ('+kind+')</td><td><a href=javascript:loadMedia('+id+',&quot;'+kind+'&quot;)>&nbsp;&nbsp;bekijk</a></td><td><a href=javascript:deleteMedia('+id+')>&nbsp;&nbsp;verwijder</a><br/></td></tr>');
+		DH.addHTML('vms', '<tr><td>'+name+' ('+kind+')</td><td>&nbsp;&nbsp;&nbsp;&nbsp;<a href=javascript:loadMedia('+id+',&quot;'+kind+'&quot;)>bekijk</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;<a href=javascript:deleteMedia('+id+')>verwijder</a><br/></td></tr>');
 	} 
+	DH.addHTML('vms', '</table>')
 	momentOff();
   }//makeOverview()
   
@@ -197,7 +198,7 @@ KeyWorx functies (ext: KWClientCMS.js)
 					return;
 				}
 				TST.pr('server response ' + elm.tagName);
-				TST.pr('xml content:<pre>' + DH.escape(elm.ownerDocument.xml) + '</pre>');
+				//TST.pr('xml content:<pre>' + DH.escape(elm.ownerDocument.xml) + '</pre>');
 				parseVM(elm);
 			},
 		
@@ -280,10 +281,8 @@ MM_reloadPage(true);
     </div>
  </div>
  
- <div id="result" style="position:absolute; width:539px; height:115px; z-index:51; left: 0px; top: 573px; overflow: auto;" class="poidata"></div>
- <div id="media" style="position:absolute; width:455px; height:138px; z-index:4; left: 528px; top: 682px; overflow: auto;" class="poidata"></div>
-
-  <h3>&nbsp;</h3>
+ <div id="result" style="position:absolute; width:539px; height:79px; z-index:51; left: 0px; top: 573px; overflow: auto;" class="poidata"></div>
+ <h3>&nbsp;</h3>
   <h3>&nbsp;</h3>
   <h3>&nbsp;</h3>
   <h3>&nbsp;</h3>
