diwi: last update

--- a/app/diwi/trunk/client/web/pages/welkom.html
+++ b/app/diwi/trunk/client/web/pages/welkom.html
@@ -19,7 +19,7 @@ De moderne "wichelroede" is geen wilge- of hazelaartak, maar een slim navigatie-
 <p>
 <strong>Opnieuw aanmelding voor reeds aangemelde bezoekers </strong><br>
 U heeft zich al eens aangemeld als deelnemer aan de digitale wichelroede. <br>
-<a href="http://webgrs.wur.nl/cgi/projects/diwi/" > Klik hier om aan te geven wanneer u wilt gaan wandelen of fietsen. </a>
+<a href="http://webgrs.wur.nl/cgi/projects/diwi/aanmelding/" > Klik hier om aan te geven wanneer u wilt gaan wandelen of fietsen. </a>
 </p>
 
 <p>
