--- a/app/diwi/trunk/client/web/pages/contact_right.html
+++ b/app/diwi/trunk/client/web/pages/contact_right.html
@@ -3,15 +3,15 @@
 <div id="over_diwi_partners" class="right_vakje" >
 	<br>
 	<li><strong>Partners</strong></li>
-	<li><a href="http://www.alterra.wur.nl"> Alterra </a></li>
-    <li><a href="http://www.ds.landschapsarchitecten.nl"> DS Landschapsarchitecten</a></li>
-	<li><a href="http://www.galileogroep.nl/"> Galileo CommunicatieProjecten </a></li>
-	<li><a href="http://www.utrecht.nl"> Gemeente Utrecht </a></li>
-	<li><a href="http://www.tdn.nl"> Kadaster TDN </a></li>
-	<li><a href="http://www.kpn.com"> KPN </a></li>
-	<li><a href="http://www.provincie-utrecht.nl"> Provincie Utrecht </a></li>
-	<li><a href="http://www.svgv.nl"> Stichting Vernieuwing Gelderse Vallei </a></li>
-	<li><a href="http://www.waag.org"> Waag </a></li>
-	<li><a href="http://www.wageningenuniversiteit.nl"> Wageningen Universiteit </a></li>
+	<li><a href="http://www.alterra.wur.nl" target="_blank"> Alterra </a></li>
+    <li><a href="http://www.ds.landschapsarchitecten.nl" target="_blank"> DS Landschapsarchitecten</a></li>
+	<li><a href="http://www.galileogroep.nl/" target="_blank"> Galileo CommunicatieProjecten </a></li>
+	<li><a href="http://www.utrecht.nl" target="_blank"> Gemeente Utrecht </a></li>
+	<li><a href="http://www.tdn.nl" target="_blank"> Kadaster TDN </a></li>
+	<li><a href="http://www.kpn.com" target="_blank"> KPN </a></li>
+	<li><a href="http://www.provincie-utrecht.nl" target="_blank"> Provincie Utrecht </a></li>
+	<li><a href="http://www.svgv.nl" target="_blank"> Stichting Vernieuwing Gelderse Vallei </a></li>
+	<li><a href="http://www.waag.org" target="_blank"> Waag </a></li>
+	<li><a href="http://www.wageningenuniversiteit.nl" target="_blank"> Wageningen Universiteit </a></li>
 	
 </div>
