--- a/app/diwi/trunk/client/web/pages/over_diwi.html
+++ b/app/diwi/trunk/client/web/pages/over_diwi.html
@@ -14,7 +14,7 @@ De resultaten van het onderzoek worden uiteindelijk opgetekend in een rapport wa
 
 <ul style="list-style-type:decimal;">
 <li>
-coordinatie [ <a href="http://www.rgi.nl/index.php?sid=84&amp;search=project&amp;nummer=RGI-156&amp;titel=&amp;korte_titel=&amp;thema=&amp;penvoerder=&amp;partner=&amp;submit=Zoek#item_89" > RGI project site </a> ]
+coordinatie [ <a href="http://www.rgi.nl/index.php?sid=84&amp;search=project&amp;nummer=RGI-156&amp;titel=&amp;korte_titel=&amp;thema=&amp;penvoerder=&amp;partner=&amp;submit=Zoek#item_89" target="_blank" > RGI project site </a> ]
 </li>		
 <li>
 framework ontwikkeling
@@ -23,7 +23,7 @@ framework ontwikkeling
 opzet gebruikonderzoek
 </li>		
 <li>
-data analyse en beschikbaarheid [ <a href="http://library.wur.nl/way/bestanden/clc/1865111.pdf"> </a> ]
+data analyse en beschikbaarheid [ <a href="http://library.wur.nl/way/bestanden/clc/1865111.pdf" target="_blank"> </a> ]
 </li>		
 <li>
 ontwerp prototype DiWi
