--- a/app/diwi/trunk/client/web/pages/over_diwi_right.html
+++ b/app/diwi/trunk/client/web/pages/over_diwi_right.html
@@ -1,8 +1,8 @@
 <div id="over_diwi_publicaties" class="right_vakje" >
     <br>
 	<li><strong>Publicaties</strong></li>
-	<li><a href="media/pdf/digwich_broch_070205_01-low.pdf"> Folder Digitale Wichelroede </a></li>
-	<li><a href="media/pdf/20070628MATRIX-DiWi.pdf"> Digitale Wichelroede Artikel </a></li>
+	<li><a href="media/pdf/digwich_broch_070205_01-low.pdf" target="_blank"> Folder Digitale Wichelroede </a></li>
+	<li><a href="media/pdf/20070628MATRIX-DiWi.pdf" target="_blank"> Digitale Wichelroede Artikel </a></li>
 	
 </div>	
 
@@ -10,23 +10,23 @@
     <br>
 	
 	<li><strong>Links</strong></li>
-	<li><a href="http://www.waag.org/project/digitalewichelroede"> Waag Society </a></li>
-	<li><a href="http://www.rgi.nl/index.php?sid=84&amp;search=project&amp;nummer=RGI-156&amp;titel=&amp;korte_titel=&amp;thema=&amp;penvoerder=&amp;partner=&amp;submit=Zoek#item_89" > RGI project site </a></li>
+	<li><a href="http://www.waag.org/project/digitalewichelroede" target="_blank"> Waag Society </a></li>
+	<li><a href="http://www.rgi.nl/index.php?sid=84&amp;search=project&amp;nummer=RGI-156&amp;titel=&amp;korte_titel=&amp;thema=&amp;penvoerder=&amp;partner=&amp;submit=Zoek#item_89" target="_blank" > RGI project site </a></li>
 	
 </div>
 <div id="over_diwi_partners" class="right_vakje" >
 	<br>
 	
 	<li><strong>Partners</strong></li>
-	<li><a href="http://www.alterra.wur.nl"> Alterra </a></li>
-    <li><a href="http://www.ds.landschapsarchitecten.nl"> DS Landschapsarchitecten</a></li>
-	<li><a href="http://www.galileogroep.nl/"> Galileo CommunicatieProjecten </a></li>
-	<li><a href="http://www.utrecht.nl"> Gemeente Utrecht </a></li>
-	<li><a href="http://www.tdn.nl"> Kadaster TDN </a></li>
-	<li><a href="http://www.kpn.com"> KPN </a></li>
-	<li><a href="http://www.provincie-utrecht.nl"> Provincie Utrecht </a></li>
-	<li><a href="http://www.svgv.nl"> Stichting Vernieuwing Gelderse Vallei </a></li>
-	<li><a href="http://www.waag.org"> Waag Society </a></li>
-	<li><a href="http://www.wageningenuniversiteit.nl"> Wageningen Universiteit </a></li>
+	<li><a href="http://www.alterra.wur.nl" target="_blank"> Alterra </a></li>
+    <li><a href="http://www.ds.landschapsarchitecten.nl" target="_blank"> DS Landschapsarchitecten</a></li>
+	<li><a href="http://www.galileogroep.nl/" target="_blank"> Galileo CommunicatieProjecten </a></li>
+	<li><a href="http://www.utrecht.nl" target="_blank"> Gemeente Utrecht </a></li>
+	<li><a href="http://www.tdn.nl" target="_blank"> Kadaster TDN </a></li>
+	<li><a href="http://www.kpn.com" target="_blank"> KPN </a></li>
+	<li><a href="http://www.provincie-utrecht.nl" target="_blank"> Provincie Utrecht </a></li>
+	<li><a href="http://www.svgv.nl" target="_blank"> Stichting Vernieuwing Gelderse Vallei </a></li>
+	<li><a href="http://www.waag.org" target="_blank"> Waag Society </a></li>
+	<li><a href="http://www.wageningenuniversiteit.nl" target="_blank"> Wageningen Universiteit </a></li>
 	
 </div>
