--- a/app/diwi/trunk/client/web/pages/welkom.html
+++ b/app/diwi/trunk/client/web/pages/welkom.html
@@ -19,12 +19,12 @@ De moderne "wichelroede" is geen wilge- of hazelaartak, maar een slim navigatie-
 <p>
 <strong>Opnieuw aanmelding voor reeds aangemelde bezoekers </strong><br>
 U heeft zich al eens aangemeld als deelnemer aan de digitale wichelroede. <br>
-<a href="http://webgrs.wur.nl/cgi/projects/diwi/aanmelding/" > Klik hier om aan te geven wanneer u wilt gaan wandelen of fietsen. </a>
+<a href="http://webgrs.wur.nl/cgi/projects/diwi/aanmelding/" target="_blank" > Klik hier om aan te geven wanneer u wilt gaan wandelen of fietsen. </a>
 </p>
 
 <p>
 <strong>Inloggen voor nieuwe bezoekers </strong><br>
-Gaat u voor het eerst inloggen? <a href="http://webgrs.wur.nl/cgi/projects/diwi/" ><br>
+Gaat u voor het eerst inloggen? <a href="http://webgrs.wur.nl/cgi/projects/diwi/" target="_blank" ><br>
 Klik dan hier om u voor het eerst aan te melden. </a>
 </p>
 
