--- a/app/diwi/trunk/client/web/pages/pers.html
+++ b/app/diwi/trunk/client/web/pages/pers.html
@@ -3,12 +3,12 @@
 	<strong>TV</strong> 
 	<li>
 	TV regionale omroep Utrecht (documentaire over ontwikkeling) 7 juli 2007. <br>
-	<a href="http://www.youtube.com/watch?v=hCzyMQQAfCM&feature=related">Klik hier om deze uitzending te bekijken.  </a>
+	<a href="http://www.youtube.com/watch?v=hCzyMQQAfCM&feature=related" target="_blank" >Klik hier om deze uitzending te bekijken.  </a>
 	</li>
 	<li>
 	TV regionale omroep Gelderland (documentaire over gebruiktest). 
 	op ongeveer 1/3 vanaf het begin van het programma van 17 augustus 2007. <br>
-	<a href="http://www.rtvgelderlandarchief.nl/index.php?datum=17082007&programma=&id=53234">Klik hier om deze uitzending te bekijken.  </a>
+	<a href="http://www.rtvgelderlandarchief.nl/index.php?datum=17082007&programma=&id=53234" target="_blank" >Klik hier om deze uitzending te bekijken.  </a>
 	</li>
 	</ul>
 	<ul>
@@ -21,30 +21,30 @@
 	</li>
 	<li>
 	Radio regionale omroep Gelderland (telefonisch interview) 16 augustus 2007. <br>
-	<a href="http://www.radio-online.nl/radioonline.php"> Klik hier voor dit fragment. </a> 
+	<a href="http://www.radio-online.nl/radioonline.php" target="_blank" > Klik hier voor dit fragment. </a> 
 	</li>
 	<li>
 	Radio 1: TROS- radio-online: het programma van 21 augustus 2007 (studio interview). <BR>
 	
-	<a href="http://cgi.omroep.nl/cgi-bin/streams?/radio1/tros/radioonline/20070821-20.wma?start=12:00"> Klik hier voor meer info (pdf). </a>
+	<a href="http://cgi.omroep.nl/cgi-bin/streams?/radio1/tros/radioonline/20070821-20.wma?start=12:00" target="_blank" > Klik hier voor meer info (pdf). </a>
 	</li>
 	</ul>
 	<ul>
 	<strong>Week- en dagbladen </strong> 
 	<li>
-	Reformatorisch dagblad 170807 "Met "super TomTom" de Grebbelinie op". <a href="media/pdf/reform_dagblad.pdf"> Klik hier voor meer info (pdf). </a>
+	Reformatorisch dagblad 170807 "Met "super TomTom" de Grebbelinie op". <a href="media/pdf/reform_dagblad.pdf" target="_blank" > Klik hier voor meer info (pdf). </a>
 	</li>
 	<li>
-	Gelderlander, juli 2007. <a href="media/pdf/gelderlander070702.pdf"> Klik hier voor meer info (pdf). </a>. 
+	Gelderlander, juli 2007. <a href="media/pdf/gelderlander070702.pdf" target="_blank" > Klik hier voor meer info (pdf). </a>. 
 	</li>
 	<li>
-	AD 220807 "GPS-ontvanger als alwetende gids".  <a href="media/pdf/AD070822.pdf"> Klik hier voor meer info (pdf). </a>. 
+	AD 220807 "GPS-ontvanger als alwetende gids".  <a href="media/pdf/AD070822.pdf" target="_blank" > Klik hier voor meer info (pdf). </a>. 
 	</li>
 	<li>
-	Valleikrant, juli 2007. <a href="media/pdf/valleikrant0707nr1.pdf"> Klik hier voor meer info (pdf). </a>. 
+	Valleikrant, juli 2007. <a href="media/pdf/valleikrant0707nr1.pdf" target="_blank"> Klik hier voor meer info (pdf). </a>. 
 	</li>
 	<li>
-	Gelderlander, augustus 2007.  <a href="media/pdf/http___www.gelderlander.nl_devallei_article1595405.pdf"> Klik hier voor meer info (pdf). </a>. 
+	Gelderlander, augustus 2007.  <a href="media/pdf/http___www.gelderlander.nl_devallei_article1595405.pdf" target="_blank"> Klik hier voor meer info (pdf). </a>. 
 	</li>
 	</ul>
 	
@@ -59,7 +59,7 @@
 	<strong>Internet </strong> 
 	<li>
 	DiWi Nieuwsbrief 1, september 2007 toegezonden aan alle gebruiktesters. <br>
-	<a href="media/pdf/DigitaleWichelroede_nieuwsbrief_sept07.pdf"> Klik hier voor meer info (pdf). </a>
+	<a href="media/pdf/DigitaleWichelroede_nieuwsbrief_sept07.pdf" target="_blank"> Klik hier voor meer info (pdf). </a>
 	</li>
 	<li>
 		Op 01102007 waren er 692 hits via Google trefwoorden: Digitale Wichelroede <BR>
